reworked for better mobile (small-screen) support

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1 {letter-spacing: 6px}
   
   <div class="w3-padding-16">
     <div class="w3-bar w3-border">
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Home</a>
+      <a href="index.html" class="w3-bar-item w3-button w3-light-grey">Home</a>
       <a href="research.html" class="w3-bar-item w3-button">Research</a>
       <a href="CV.html" class="w3-bar-item w3-button">CV</a>
       <a href="miscellany.html" class="w3-bar-item w3-button">Miscellany</a>
@@ -32,8 +32,10 @@ h1 {letter-spacing: 6px}
 </header>
 
 <!-- Grid -->
-<div class="w3-row" style="margin-bottom:80px; margin-left:auto; margin-right:auto; width:56%">
-  <div class="w3-half w3-card w3-row-padding">
+<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+  <img src="profile_pic.png" alt="Lewis Weinberger">
+  
+  <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
     <p class="w3-large w3-text-theme"><b>Personal Info</b></p>
     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large"></i>PhD Student</p>
     <p><i class="fa fa-home fa-fw w3-margin-right w3-large"></i>Obs 27, <BR>
@@ -43,10 +45,6 @@ h1 {letter-spacing: 6px}
      <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Cambridge CB3 0HA, UK</p>
     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large"></i><a href="mailto:lewis.weinberger@ast.cam.ac.uk">lewis.weinberger@ast.cam.ac.uk</a></p>
     <p><i class="fa fa-phone fa-fw w3-margin-right w3-large"></i>+44 (0) 1223-337540</p>
-  </div>
-
-  <div class="w3-half w3-row-padding">
-    <img src="profile_pic.png" style="width:100%" alt="Lewis Weinberger">
   </div>
 </div>
   
