--- a/miscellany.html
+++ b/miscellany.html
@@ -33,8 +33,8 @@ h1 {letter-spacing: 6px}
 </header>
 
 <!-- Grid -->
-<div class="w3-container" style="margin-bottom:80px; margin-left:auto; margin-right:auto; width:58%">
-    <div class="w3-center w3-card" style="margin:auto; width=50%">
+<div class="w3-container" style="margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+    <div class="w3-center w3-card" style="margin:auto">
         <p>Coming soon...</p>
      </div>
 </div>
