--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h1 {letter-spacing: 6px}
 </header>
 
 <!-- Grid -->
-<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; width=95%; max-width:500px">
   <img src="profile_pic.png" alt="Lewis Weinberger">
   
   <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
