--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@ h1 {letter-spacing: 6px}
 </header>
 
 <!-- Grid -->
-<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; width=95%; max-width:500px">
+<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+  <div style="width=100%">
   <img src="profile_pic.png" alt="Lewis Weinberger">
-  
+  </div>
+    
   <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
     <p class="w3-large w3-text-theme"><b>Personal Info</b></p>
     <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large"></i>PhD Student</p>
