--- a/index.html
+++ b/index.html
@@ -23,19 +23,17 @@ h1 {letter-spacing: 6px}
   
   <div class="w3-padding-16">
     <div class="w3-bar w3-border">
-      <a href="index.html" class="w3-bar-item w3-button w3-light-grey">Home</a>
-      <a href="research.html" class="w3-bar-item w3-button">Research</a>
-      <a href="CV.html" class="w3-bar-item w3-button">CV</a>
-      <a href="miscellany.html" class="w3-bar-item w3-button">Miscellany</a>
+      <a href="index.html" class="w3-bar-item w3-button w3-light-grey w3-mobile">Home</a>
+      <a href="research.html" class="w3-bar-item w3-button w3-mobile">Research</a>
+      <a href="CV.html" class="w3-bar-item w3-button w3-mobile">CV</a>
+      <a href="miscellany.html" class="w3-bar-item w3-button w3-mobile">Miscellany</a>
     </div>
   </div>
 </header>
 
 <!-- Grid -->
-<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
-  <div style="width=100%">
-  <img src="profile_pic.png" alt="Lewis Weinberger">
-  </div>
+<div class="w3-row-padding" style="margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+  <img srcset="profile_pic_250w.png 250w, profile_pic_500w.png 500w" sizes="(max-width: 500px) 250px, 500px" src="profile_pic_500w.png" alt="Lewis Weinberger">
     
   <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
     <p class="w3-large w3-text-theme"><b>Personal Info</b></p>
