--- a/research.html
+++ b/research.html
@@ -24,10 +24,10 @@ h1 {letter-spacing: 6px}
   
   <div class="w3-padding-16">
     <div class="w3-bar w3-border">
-      <a href="index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="research.html" class="w3-bar-item w3-button w3-light-grey">Research</a>
-      <a href="CV.html" class="w3-bar-item w3-button">CV</a>
-      <a href="miscellany.html" class="w3-bar-item w3-button">Miscellany</a>
+      <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+      <a href="research.html" class="w3-bar-item w3-button w3-light-grey w3-mobile">Research</a>
+      <a href="CV.html" class="w3-bar-item w3-button w3-mobile">CV</a>
+      <a href="miscellany.html" class="w3-bar-item w3-button w3-mobile">Miscellany</a>
     </div>
   </div>
 </header>
