--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ h1 {letter-spacing: 6px}
 </header>
 
 <!-- Grid -->
-<div class="w3-row-padding" style="margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
-  <img srcset="profile_pic_250w.png 250w, profile_pic_500w.png 500w" sizes="(max-width: 500px) 250px, 500px" src="profile_pic_500w.png" alt="Lewis Weinberger">
+<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
+   <img srcset="profile_pic_250w.png 250w, profile_pic_500w.png 500w" sizes="(max-width: 500px) 250px, 500px" src="profile_pic_500w.png" alt="Lewis Weinberger">
     
   <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
     <p class="w3-large w3-text-theme"><b>Personal Info</b></p>
