added rusticism section

--- a/miscellany.html
+++ b/miscellany.html
@@ -34,8 +34,14 @@ h1 {letter-spacing: 6px}
 
 <!-- Grid -->
 <div class="w3-container" style="margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
-    <div class="w3-center w3-card" style="margin:auto">
-        <p>Coming soon...</p>
+    <div class="w3-row-padding w3-card" style="margin:auto">
+        <p class="w3-large"><b>Rusticisms</b></p>
+        <p>A collection of humorous Rust witticisms, sadly none of which I can claim credit for creating*:</p><hr>
+        <pre><code class="language-rust">Failure is not an <font color="red">Option</font>&lt;<font color="green">T</font>&gt;, it's a <font color="red">Result</font>&lt;<font color="green">T</font>,<font color="green">E</font>&gt;.</code></pre>
+        <pre><code class="language-rust">In Rust, <font color="red">None</font> is always an <font color="red">Option</font>&lt;<font color="green">_</font>&gt;.</code></pre>
+        <pre><code class="language-rust">Rust iterators are the best thing since <font color="red">&</font>Bread[..].</code></pre>
+        <hr>
+        <p id="footnote">*see <a href="https://users.rust-lang.org/t/twir-quote-of-the-week/">here</a> for more pearls of witticism.
      </div>
 </div>
   
