fixed code display on small screens

--- a/miscellany.html
+++ b/miscellany.html
@@ -37,9 +37,15 @@ h1 {letter-spacing: 6px}
     <div class="w3-row-padding w3-card" style="margin:auto">
         <p class="w3-large"><b>Rusticisms</b></p>
         <p>A collection of humorous Rust witticisms, sadly none of which I can claim credit for creating*:</p><hr>
-        <pre><code class="language-rust">Failure is not an <font color="red">Option</font>&lt;<font color="green">T</font>&gt;, it's a <font color="red">Result</font>&lt;<font color="green">T</font>,<font color="green">E</font>&gt;.</code></pre>
-        <pre><code class="language-rust">In Rust, <font color="red">None</font> is always an <font color="red">Option</font>&lt;<font color="green">_</font>&gt;.</code></pre>
-        <pre><code class="language-rust">Rust iterators are the best thing since <font color="red">&</font>Bread[..].</code></pre>
+	<p style="font-family:'Lucida Console', monospace">
+        Failure is not an <font color="red">Option</font>&lt;<font color="green">T</font>&gt;, it's a <font color="red">Result</font>&lt;<font color="green">T</font>,<font color="green">E</font>&gt;.
+	</p>
+	<p style="font-family:'Lucida Console', monospace">
+        In Rust, <font color="red">None</font> is always an <font color="red">Option</font>&lt;<font color="green">_</font>&gt;.
+	</p>
+	<p style="font-family:'Lucida Console', monospace">
+        Rust iterators are the best thing since <font color="red">&</font>Bread[..].
+	</p>
         <hr>
         <p id="footnote">*see <a href="https://users.rust-lang.org/t/twir-quote-of-the-week/">here</a> for more pearls of witticism.
      </div>
