added linked-in url

--- a/research.html
+++ b/research.html
@@ -83,6 +83,7 @@ h1 {letter-spacing: 6px}
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-xxlarge"> 
   <a href="https://github.com/lewis-weinberger"><i class="fa fa-github w3-hover-opacity"></i></a>
   <a href="https://bitbucket.org/lweinberger/"><i class="fa fa-bitbucket w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/lewis-weinberger-119923194"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <a href="https://orcid.org/0000-0002-7312-4595"><i class="ai ai-orcid w3-hover-opacity"></i></a>
   <a href="https://arxiv.org/search/?searchtype=author&query=Weinberger%2C+L+H"><i class="ai ai-arxiv w3-hover-opacity"></i></a>
   <a href="https://ui.adsabs.harvard.edu/search/q=author%3A&quot;Weinberger%2C Lewis H.&quot;"><i class="ai ai-ads w3-hover-opacity"></i></a>
