naive email obfuscation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h1 {letter-spacing: 6px}
      <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>University of Cambridge, <BR>
      <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Madingly Road, <BR>
      <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Cambridge CB3 0HA, UK</p>
-    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large"></i><a href="mailto:lewis.weinberger@ast.cam.ac.uk">lewis.weinberger@ast.cam.ac.uk</a></p>
+    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large"></i>lewis.weinberger<i class="fa fa-at"></i>ast.cam.ac.uk</p>
     <p><i class="fa fa-phone fa-fw w3-margin-right w3-large"></i>+44 (0) 1223-337540</p>
   </div>
 </div>
