--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html>
-<title>Lewis Weinberger's Homepage</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-<style>
-body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 6px}
-.w3-row-padding img {margin-bottom: 12px}
-</style>
-<body>
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
-
-<!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:50px 16px">
-  <h1>Lewis Weinberger</h1>
-  
-  <div class="w3-padding-16">
-    <div class="w3-bar w3-border">
-      <a href="index.html" class="w3-bar-item w3-button w3-light-grey w3-mobile">Home</a>
-      <a href="research.html" class="w3-bar-item w3-button w3-mobile">Research</a>
-      <a href="CV.html" class="w3-bar-item w3-button w3-mobile">CV</a>
-      <a href="miscellany.html" class="w3-bar-item w3-button w3-mobile">Miscellany</a>
-    </div>
-  </div>
-</header>
-
-<!-- Grid -->
-<div class="w3-row" style="text-align: center; margin-bottom:80px; margin-left:auto; margin-right:auto; max-width:500px">
-   <img srcset="profile_pic_250w.png 250w, profile_pic_500w.png 500w" sizes="(max-width: 500px) 250px, 500px" src="profile_pic_500w.png" alt="Lewis Weinberger">
-    
-  <div class="w3-card w3-row-padding" style="text-align: justify; margin-top:20px;">
-    <p class="w3-large w3-text-theme"><b>Personal Info</b></p>
-    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large"></i>PhD Student</p>
-    <p><i class="fa fa-home fa-fw w3-margin-right w3-large"></i>Obs 27, <BR>
-     <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Institute of Astronomy, <BR>
-     <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>University of Cambridge, <BR>
-     <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Madingly Road, <BR>
-     <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-white"></i>Cambridge CB3 0HA, UK</p>
-    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large"></i>lewis.weinberger<i class="fa fa-at"></i>ast.cam.ac.uk</p>
-    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large"></i>+44 (0) 1223-337540</p>
-  </div>
-</div>
-  
-<!-- End Page Content -->
-</div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-xxlarge"> 
-  <a href="https://github.com/lewis-weinberger"><i class="fa fa-github w3-hover-opacity"></i></a>
-  <a href="https://bitbucket.org/lweinberger/"><i class="fa fa-bitbucket w3-hover-opacity"></i></a>
-  <a href="https://www.linkedin.com/in/lewis-weinberger-119923194"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  <a href="https://orcid.org/0000-0002-7312-4595"><i class="ai ai-orcid w3-hover-opacity"></i></a>
-  <a href="https://arxiv.org/search/?searchtype=author&query=Weinberger%2C+L+H"><i class="ai ai-arxiv w3-hover-opacity"></i></a>
-  <a href="https://ui.adsabs.harvard.edu/search/q=author%3A&quot;Weinberger%2C Lewis H.&quot;"><i class="ai ai-ads w3-hover-opacity"></i></a>
-  <p class="w3-large">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-</body>
-</html>
+<!DOCTYPE html><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><title>Home — Lewis Weinberger's Homepage</title><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /><link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" /><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" /><style>body, h1, h2 {font-family: 'Raleway', Arial, sans-serif;height: 100%;}</style><script>MathJax = { tex: {inlineMath: [['$', '$']]} };</script><script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head><body><header style="background: #9e9e9e; margin-bottom:80px;"><div class="w3-container" style="text-align: justify; margin-left:auto; margin-right:auto; max-width:800px"><div class="w3-panel w3-opacity"><div class="w3-bar w3-light-grey"><a class="w3-bar-item w3-button w3-text-black w3-mobile w3-large" href="/index.html">Home</a><a class="w3-bar-item w3-button w3-text-black w3-mobile w3-large" href="/about.html">About</a><a class="w3-bar-item w3-button w3-text-black w3-mobile w3-large" href="/research.html">Research</a><a class="w3-bar-item w3-button w3-text-black w3-mobile w3-large" href="/misc.html">Miscellany</a></div></div></div></header><div class="w3-container" style="text-align: justify; margin-left:auto; margin-right:auto; max-width:800px"><p class="w3-xlarge" style="margin-top:0; text-align: center;">Hello!</p><div class="w3-container w3-center" style="text-align: center"><img src="images/mainframe_256x256.gif" /></div></div><footer style="background: #9e9e9e; height: 100%; min-height:100%; margin-top:80px;"><div class="w3-container w3-center w3-xxlarge" style="margin-left:auto; margin-right:auto; max-width:800px;"><p><a href="https://github.com/lewis-weinberger"><i class="fa fa-github w3-hover-opacity w3-padding-small"></i></a><a href="https://bitbucket.org/lweinberger/"><i class="fa fa-bitbucket w3-hover-opacity w3-padding-small"></i></a><a href="https://www.linkedin.com/in/lewis-weinberger-119923194"><i class="fa fa-linkedin w3-hover-opacity w3-padding-small"></i></a><a href="https://orcid.org/0000-0002-7312-4595"><i class="ai ai-orcid w3-hover-opacity w3-padding-small"></i></a><a href="https://arxiv.org/search/?searchtype=author&amp;query=Weinberger%2C+L+H"><i class="ai ai-arxiv w3-hover-opacity w3-padding-small"></i></a><a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Weinberger%2C%20Lewis%20H.%22"><i class="ai ai-ads w3-hover-opacity w3-padding-small"></i></a></p><p class="w3-small">© 2019 Lewis Weinberger <a class="cc-button" href="https://creativecommons.org/licenses/by-sa/4.0/"><img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png" class="w3-hover-opacity" /></a><br />This website is built with <a href="http://haunt.dthompson.us" class="w3-hover-opacity">Haunt</a>, a static site generator written in <a href="https://gnu.org/software/guile" class="w3-hover-opacity">Guile Scheme</a>.<br />Powered by the <a href="https://www.w3schools.com/w3css/default.asp" class="w3-hover-opacity">w3.css</a> framework.</p></div></footer></body>
