--- a/misc.html
+++ b/misc.html
@@ -28,6 +28,10 @@
     
     <H1>Recent Posts</H1>
 
+    <H3>• <A href="star_trip/index.html">Star Trip</A></H3>
+
+    <P>September X, 2023</P>
+
     <H3>• <A href="emulating-the-mainframe.html">Emulating the
     mainframe</A></H3>
 
@@ -47,7 +51,7 @@
     <A href=
     "https://ui.adsabs.harvard.edu/search/q=author%3A%22Weinberger%2C%20Lewis%20H.%22">
     ADS</A>
-    <P>© 2021 Lewis Weinberger</P>
+    <P>© 2023 Lewis Weinberger</P>
 
     <P><A href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA
     4.0</A>
