--- a/misc.html
+++ b/misc.html
@@ -30,7 +30,7 @@
 
     <H3>• <A href="star_trip/index.html">Star Trip</A></H3>
 
-    <P>September X, 2023</P>
+    <P>September 23, 2023</P>
 
     <H3>• <A href="emulating-the-mainframe.html">Emulating the
     mainframe</A></H3>
