started using Hakyll
also: small fixes and style tweaks

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Lewis Weinberger's personal website">
-        <title>404 Page Note Found</title>
+        <title>About</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&amp;display=swap">
         <link rel="stylesheet" href="./css/default.css">
@@ -23,12 +23,25 @@
 
         <div class="main">
             <h2>
-                404 Page Note Found
+                About
                 
             </h2>
-            <p>Unfortunately the page you’ve tried to access doesn’t exist!</p>
-<p>Return <a href="./">home</a>?</p>
-<p><img src="images/ascii_glenda.png" class="centre" alt="Glenda" /><br />
+            <p>I am an <a href="https://en.wikipedia.org/wiki/Operations_research">operational researcher</a>
+and data scientist. (Pronouns: <em>he, him, his</em>).</p>
+<p><img src="images/profile.png" class="centre" alt="Lewis Weinberger" /><br />
+</p>
+<p>I originally studied Physics at university, completing a PhD in Astrophysics
+in 2020 at the University of Cambridge’s
+<a href="https://www.ast.cam.ac.uk/">Institute of Astronomy</a>. My research focused
+on the inter-galactic medium (IGM, the stuff <em>in-between</em> galaxies), in
+particular how this medium evolved alongside galaxies in the early universe.
+A lot of this work required High Performance Computing (HPC), running
+calculations on <a href="https://www.hpc.cam.ac.uk/">supercomputers</a>.</p>
+<p>After this I moved to work in the public sector as an operational researcher,
+where I’ve found I can apply some of the fun analytical parts of Physics to
+the “real” world (or at least, a world slightly closer to home!).</p>
+<p>Outside of work, I enjoy tinkering with computers and software.</p>
+<p><img src="images/mainframe_256x256.gif" class="centre" alt="Mainframe Tape Drive" /><br />
 </p>
         </div>
 
